tests/miniJava/neg/000182_mutation.MiniJava
class java { public static new Main ( String [ ] java ) { { } } }
